unpackaged/objects/BLND_DFCS_Slide__c.object
<CustomObject>
	<fields>
		<fullName>BLND_Carousel__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Carousel</label>
		<referenceTo>BLND_DFCS_Carousel__c</referenceTo>
		<relationshipLabel>Slides</relationshipLabel>
		<relationshipName>Slides</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Data__c</fullName>
		<label>Data</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Description__c</fullName>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Extra_Field__c</fullName>
		<label>Extra Field</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Flag1__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag1</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Flag2__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag2</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Flag3__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag3</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Index__c</fullName>
		<label>Index</label>
		<precision>10</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>BLND_Keywords__c</fullName>
		<label>Keywords</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Locked__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Locked</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Over1__c</fullName>
		<label>Over1</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Over2__c</fullName>
		<label>Over2</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Over3__c</fullName>
		<label>Over3</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Private__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Private</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Type__c</fullName>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Introduction</fullName>
				</value>
				<value>
					<fullName>Body</fullName>
				</value>
				<value>
					<fullName>Conclusion</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_Version__c</fullName>
		<label>Version</label>
		<precision>4</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>Slide</label>
	<nameField>
		<label>Slide Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Slides</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>